[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "okozeriki", email = "riki21061216@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "ipykernel>=6.29.5",
    "ruff>=0.5.5",
    "mypy>=1.11.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.mypy]
allow_redefinition = true #同じ変数を再定義してもエラーにならない
allow_untyped_globals = false #型推論できないものが型定義されてなかったらエラーでる
check_untyped_defs = true #グローバル変数に型がついていないとエラーになる
color_output = true #mypy出力をカラー表示
disallow_incomplete_defs = true #型定義が不完全な場合エラーになる
disallow_untyped_calls = false #型定義されていない関数を呼び出すとエラーになる
disallow_untyped_decorators = false
disallow_untyped_defs = true #型定義されていない変数を使うとエラーになる
error_summary = true
ignore_missing_imports = true #型定義されていないモジュールを使ってもエラーにならない
implicit_reexport = false #エクスポートを防ぐ
# namespace_packages = true
no_implicit_optional = true #Optional型を使う
pretty = true
show_column_numbers = true #なくてもいい
show_error_codes = true
show_error_context = true
show_traceback = true
# strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true #到達不可能なコードがあると警告が出る
warn_unused_configs = true
# warn_unused_ignores = false

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = [
    "E501", # line too long
]

[tool.ruff]
include = ["*.ipynb", "*.py"]
line-length = 99

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
